--- a/src/styles/WorkExperience.module.scss
+++ b/src/styles/WorkExperience.module.scss
@@ -1,5 +1,5 @@
-.general-form__edit {
- 
+.work-form__edit {
+ padding-bottom: 3em;
   background-color: #3A6055
   ;
   form {  
@@ -10,6 +10,7 @@
   background: #f9f9f9;
   border: 1px solid #c1c1c1;
   margin: 0em auto;
+ 
   max-width: 800px;
   padding: 1em;
   color: #CD4F1A;
@@ -49,32 +50,6 @@
     background-color: yellow;
   }
 }
-.general-form__view{
-  margin-right: 125px;
-  text-align: right;
-  padding-bottom: 3.5em;
-
-  span{
-  color: #f06f8f;  
-  }
-  &__name
-  {
-    font-weight: bold;
-    font-size: 24px
-  }
-  h4{
-    margin-top:-1.1em;
-    font-style: italic;
-    color: white;
-    text-shadow: 2px 2px #010101;;
-  }
-  img{
-    width: 200px;
-    height: auto;
-  }
- 
-  p{
-    color: white; 
-    
-  }
+.work-form__view{
+  
 }
